[tool.poetry]
name = "signature"
version = "0.1.0"
description = ""
authors = ["satyamdas03 <116027621+satyamdas03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
opencv-python-headless = "^4.12.0.88"
scikit-image = "^0.25.2"
python-multipart = "^0.0.20"
pdf2image = "^1.17.0"
docx2txt = "^0.9"
pillow = "^11.3.0"
pymupdf = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
